feat: Add drizzle package and test

--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-DATABASE_URL="postgresql://postgres:010272@localhost:5432/prismatest?schema=public"
+DATABASE_URL="postgresql://postgres:010272@localhost:5432/prismatest"
