--- a/package.json
+++ b/package.json
@@ -7,27 +7,31 @@
     "dev": "tsx src/server.ts",
     "test:knex": "loadtest -n 500 -c 10 http://127.0.0.1:5000/knex",
     "test:prisma": "loadtest -n 500 -c 10 http://127.0.0.1:5000/prisma",
-    "test:prismaraw": "loadtest -n 500 -c 10 http://127.0.0.1:5000/prisma-raw"
+    "test:prismaraw": "loadtest -n 500 -c 10 http://127.0.0.1:5000/prisma-raw",
+    "test:drizzle": "loadtest -n 500 -c 10 http://127.0.0.1:5000/drizzle"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "@rocketseat/eslint-config": "^2.1.0",
-    "@types/node": "^20.5.9",
-    "eslint": "^8.48.0",
-    "loadtest": "^7.1.0",
-    "prisma": "^5.2.0",
-    "tsx": "^3.12.8",
-    "typescript": "^5.2.2"
+    "@types/node": "^20.10.6",
+    "drizzle-kit": "^0.20.9",
+    "eslint": "^8.56.0",
+    "loadtest": "^8.0.6",
+    "prisma": "^5.7.1",
+    "tsx": "^4.7.0",
+    "typescript": "^5.3.3"
   },
   "dependencies": {
-    "@prisma/client": "^5.2.0",
-    "axios": "^1.5.0",
-    "date-fns": "^2.30.0",
+    "@prisma/client": "^5.7.1",
+    "axios": "^1.6.3",
+    "date-fns": "^3.0.6",
     "dotenv": "^16.3.1",
-    "fastify": "^4.22.2",
-    "knex": "^2.5.1",
-    "pg": "^8.11.3"
+    "drizzle-orm": "^0.29.3",
+    "fastify": "^4.25.2",
+    "knex": "^3.1.0",
+    "pg": "^8.11.3",
+    "postgres": "^3.4.3"
   }
 }
