chore: Change postgres.js to node-postgres

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "devDependencies": {
     "@rocketseat/eslint-config": "^2.1.0",
     "@types/node": "^20.10.6",
+    "@types/pg": "^8.10.9",
     "drizzle-kit": "^0.20.9",
     "eslint": "^8.56.0",
     "loadtest": "^8.0.6",
@@ -31,7 +32,6 @@
     "drizzle-orm": "^0.29.3",
     "fastify": "^4.25.2",
     "knex": "^3.1.0",
-    "pg": "^8.11.3",
-    "postgres": "^3.4.3"
+    "pg": "^8.11.3"
   }
 }
